tests/snapshots/run_wpt_conformance__trtx_gather_float16_1D_tensor_and_int32_0D_scalar_indices_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "gather.https.any.js",
    "gather float16 1D tensor and int32 0D scalar indices default options",
    "trtx",
    Failed {
        msg: Some(
            "An error in the Trtx: Runtime error: setNamedWeights (with location) rejected\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    gatherInput: f16[24];\n  }\n\n  consts {\n    operand_1: i32[] @bytes([4, 0, 0, 0]);\n  }\n\n  nodes {\n    [gatherOutput] = gather(gatherInput, operand_1, axis=0, label=\"\");\n  }\n\n  outputs { gatherOutput; }\n}\n",
        ),
    },
)
