tests/snapshots/run_wpt_conformance__trtx_gather_float16_1D_tensor_and_int32_3D_indices_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gather.https.any.js gather float16 1D tensor and int32 3D indices default options, trtx
 gather :: gather float16 1D tensor and int32 3D indices default options: index 0: actual=-66.0625 expected=-19.6875 ulp=1845 tolerance=4
  inputs: gatherInput: [-66.0625, -68.9375, -77, -26.15625, 89.0625, -45.90625, 43.84375, 48.8125, 51.8125, 41.9375, -1.1298828125, -50.40625, 90.3125, 55.625, 44.90625, 56.84375, 10.828125, -19.6875, -37.6875, 43.125, 0.9130859375, -7.69921875, 25.765625, 73.625]; gatherIndices: [17, 19, 14, 16, 13, 0, 5, 15, 18, 18, 6, 20, 7, 22, 5, 1, 4, 19] (constant)
  expected gatherOutput: [-19.6875, 43.125, 44.90625, 10.828125, 55.625, -66.0625, -45.90625, 56.84375, -37.6875, -37.6875 ...] (len=18)
  actual gatherOutput: [-66.0625, -66.0625, -66.0625, -66.0625, -66.0625, -66.0625, -66.0625, -66.0625, -66.0625, -66.0625 ...] (len=18)
  expected gatherOutput full nd:
[-19.6875, 43.125, 44.90625, 10.828125, 55.625, -66.0625, -45.90625, 56.84375, -37.6875, -37.6875, ...] (len=18, shape=[2, 3, 3])
  actual gatherOutput full nd:
[-66.0625, -66.0625, -66.0625, -66.0625, -66.0625, -66.0625, -66.0625, -66.0625, -66.0625, -66.0625, ...] (len=18, shape=[2, 3, 3])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    gatherInput: f16[24];
  }

  consts {
    operand_0: i32[2, 3, 3] @bytes([17, 0, 0, 0, 19, 0, 0, 0, 14, 0, 0, 0, 16, 0, 0, 0, 13, 0, 0, 0, 0, 0, 0, 0, 5, 0, 0, 0, 15, 0, 0, 0, 18, 0, 0, 0, 18, 0, 0, 0, 6, 0, 0, 0, 20, 0, 0, 0, 7, 0, 0, 0, 22, 0, 0, 0, 5, 0, 0, 0, 1, 0, 0, 0, 4, 0, 0, 0, 19, 0, 0, 0]);
  }

  nodes {
    [gatherOutput] = gather(gatherInput, operand_0, axis=0, label="");
  }

  outputs { gatherOutput; }
}
