tests/snapshots/run_wpt_conformance__trtx_gather_float16_1D_tensor_and_int32_4D_indices_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gather.https.any.js gather float16 1D tensor and int32 4D indices default options, trtx
 gather :: gather float16 1D tensor and int32 4D indices default options: index 0: actual=-66.0625 expected=-37.6875 ulp=875 tolerance=4
  inputs: gatherInput: [-66.0625, -68.9375, -77, -26.15625, 89.0625, -45.90625, 43.84375, 48.8125, 51.8125, 41.9375, -1.1298828125, -50.40625, 90.3125, 55.625, 44.90625, 56.84375, 10.828125, -19.6875, -37.6875, 43.125, 0.9130859375, -7.69921875, 25.765625, 73.625]; gatherIndices: [18, 18, 22, 11, 8, 15, 12, 11, 7, 13, 7, 7] (constant)
  expected gatherOutput: [-37.6875, -37.6875, 25.765625, -50.40625, 51.8125, 56.84375, 90.3125, -50.40625, 48.8125, 55.625 ...] (len=12)
  actual gatherOutput: [-66.0625, -66.0625, -66.0625, -66.0625, -66.0625, -66.0625, -66.0625, -66.0625, -66.0625, -66.0625 ...] (len=12)
  expected gatherOutput full nd:
[-37.6875, -37.6875, 25.765625, -50.40625, 51.8125, 56.84375, 90.3125, -50.40625, 48.8125, 55.625, ...] (len=12, shape=[1, 2, 2, 3])
  actual gatherOutput full nd:
[-66.0625, -66.0625, -66.0625, -66.0625, -66.0625, -66.0625, -66.0625, -66.0625, -66.0625, -66.0625, ...] (len=12, shape=[1, 2, 2, 3])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    gatherInput: f16[24];
  }

  consts {
    operand_0: i32[1, 2, 2, 3] @bytes([18, 0, 0, 0, 18, 0, 0, 0, 22, 0, 0, 0, 11, 0, 0, 0, 8, 0, 0, 0, 15, 0, 0, 0, 12, 0, 0, 0, 11, 0, 0, 0, 7, 0, 0, 0, 13, 0, 0, 0, 7, 0, 0, 0, 7, 0, 0, 0]);
  }

  nodes {
    [gatherOutput] = gather(gatherInput, operand_0, axis=0, label="");
  }

  outputs { gatherOutput; }
}
